--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Hello</h1>
     <h2>World</h2>
-    <h2>was here</h2>
+    <h2>follow me on twitch.tv/briziii wooo!</h2>
 </body>
 </html>
