added my projects

--- a/index.html
+++ b/index.html
@@ -28,20 +28,42 @@
         <div class="home-content">
             <h1>Hi, I'm Bernard Plascencia</h1>
             <h3>Software Developer</h3>
-            <p>A creative graphic and web designer at your service </p>
-            <div class="btn-box">
-                <a href="#">Hire Me</a>
-                <a href="#">Let's Talk</a>
-            </div>
+            <p>Currently on the journey to becoming a creative graphic and web designer. I also have other skills in Photoshop and Premiere Pro that can take my developing to the next level.  </p>
         </div>
 
         <div class="home-sci">
-            <a href="#"><i class='bx bxl-facebook'></i></a>
-            <a href="#"><i class='bx bxl-twitter' ></i></a>
-            <a href="#"><i class='bx bxl-linkedin' ></i></a>
+            <a href="#"><i class='bx bxl-github'></i></i></a>
+            <a href="#"><i class='bx bx-envelope'></i></i></a>
+            <a href="#"><i class='bx bxl-linkedin'></i></a>
         </div>
 
         <span class="home-imghover"></span>
+    </section>
+
+    <section id="projects">
+        <h2 class="project-title"> My Projects</h2>
+        <div class="projects-content">
+            <article>
+                <h3>Project One</h3>
+                <p>In progress</p>
+                <h4>(ScreenShot)</h4>
+            </article>
+            <article>
+                <h3>Project Two</h3>
+                <p>In Progress</p>
+                <h4>(ScreenShot)</h4>
+            </article>
+            <article>
+                <h3>Project Three</h3>
+                <p>In Progress</p>
+                <h4>(ScreenShot)</h4>
+            </article>
+            <article class>
+                <h3>Project Four</h3>
+                <p>In Progress</p>
+                <h4>(ScreenShot)</h4>
+            </article>
+        </div>
     </section>
 </body>
 </html>
