--- a/index.html
+++ b/index.html
@@ -15,27 +15,30 @@
 
         <nav class="navbar">
             <ul>
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#home" class="active">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
+    <section id="home">
     <section class="home">
         <div class="home-content">
-            <h1>Hi, I'm Bernard Plascencia</h1>
+            <h1 id="about">Hi, I'm Bernard Plascencia</h1>
             <h3>Software Developer</h3>
             <p>Currently on the journey to becoming a creative graphic and web designer. I also have other skills in Photoshop and Premiere Pro that can take my developing to the next level.  </p>
         </div>
+    </section>
 
+    <section id="contact">
         <div class="home-sci">
-            <a href="#"><i class='bx bxl-github'></i></i></a>
-            <a href="#"><i class='bx bx-envelope'></i></i></a>
-            <a href="#"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://github.com/Bernardop13"><i class='bx bxl-github'></i></i></a>
+            <a href="mailto:junior.plascencia@gmail.com"><i class='bx bx-envelope'></i></i></a>
+            <a href="https://www.linkedin.com/in/bernardo-plascencia-24b5b0278/"><i class='bx bxl-linkedin'></i></a>
         </div>
+    </section>
 
         <span class="home-imghover"></span>
     </section>
